--- a/templates/home.html
+++ b/templates/home.html
@@ -84,7 +84,7 @@
 
         </div>
 
-        <div class="row">
+        <div class="row-container">
             <div class="card-style mb-30">
                 <div class="title d-flex flex-wrap justify-content-between">
                     <div class="left">
