--- a/templates/inventario/ventas/addVenta.html
+++ b/templates/inventario/ventas/addVenta.html
@@ -139,7 +139,7 @@
         <div class="row align-items-center">
             <div class="col-md-6">
                 <div class="title d-flex align-items-center flex-wrap mb-30">
-                    <h2 class="mr-40">Formulario de ventas</h2>
+                    <h2 class="mr-40">Formulario de consumo del insumos.</h2>
 
                 </div>
             </div>
