--- a/templates/inventario/ventas/salida_insumo_view.html
+++ b/templates/inventario/ventas/salida_insumo_view.html
@@ -14,7 +14,7 @@
         <div class="row align-items-center">
             <div class="col-md-6">
                 <div class="title d-flex align-items-center flex-wrap mb-30">
-                    <h2 class="mr-40">Ventas de Insumos</h2>
+                    <h2 class="mr-40">Consumo de Insumos</h2>
                     <a type="button" id="d_button" href="{% url 'inventario:add_venta' %}"
                        class="main-btn primary-btn btn-hover btn-sm">
                         <i class="lni lni-plus mr-5"></i> Adicionar
